[gd_scene load_steps=3 format=3 uid="uid://cx3ato433s47k"]

[ext_resource type="Script" uid="uid://bd6bqn2bsscrg" path="res://Scripts/UI/pause_menu.gd" id="1_rrvs5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_b1dhq"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrvs5")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.254902)
position = Vector2(588, 328)
scale = Vector2(1192, 672)
texture = SubResource("CanvasTexture_b1dhq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -119.5
offset_right = 168.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Back to Hub" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Hub"

[node name="Back to Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Back to Hub" to="." method="_on_back_to_hub_pressed"]
[connection signal="pressed" from="VBoxContainer/Back to Menu" to="." method="_on_back_to_menu_pressed"]
